--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,3 +4,9 @@
     align-items: $ai;
     gap: $g;
 }
+
+@mixin font($ff: 'Inter', $fs: 16px, $fw: 100) {
+    font-family: $ff;
+    font-size: $fs;
+    font-weight: $fw;
+}
