content_max added
content_max added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-<h1> Hallo Welt!</h1>
-<h2>Guten Tag :)</h2>
-
-<h3>Das wünsche ich Dir auch!</h3>
-
-
-<h3>Normann Test!</h3>
-
-<p>Martin Test</p>
-
-<app-main></app-main>
-
-<router-outlet></router-outlet>
+<section class="content_max">
+    <h1> Hallo Welt!</h1>
+    <h2>Guten Tag :)</h2>
+    
+    <h3>Das wünsche ich Dir auch!</h3>
+    
+    
+    <h3>Normann Test!</h3>
+    
+    <p>Martin Test</p>
+    
+    <app-main></app-main>
+    
+    <router-outlet></router-outlet>
+</section>
