--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,6 +10,10 @@ $light_red: rgba(255, 70, 70, 1);
 $aqua_blue: rgba(0, 190, 232, 1);
 
 /* color for fonts & bg color buttons */
+$black: rgba(0, 0, 0, 1);
 $white: rgba(255, 255, 255, 1);
 $dark_blue: rgba(42, 54, 71, 1);
 $light_blue: rgba(41, 171, 226, 1);
+
+/* bg section */
+$cream_white: #f6f7f8;
