--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,9 @@
 }
 
 .content_max {
-    max-width: 1440px;
+    max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
+
+    border: 1px solid;
 }
