--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,9 @@
-<h3>Main-Section</h3>
-<p>Der Content wäre abhängig vom login. 
-    Erste Idee ist immer die Login Section anzeigen zulassen, wohingegen der Content nach einem erfolgreichem Login erscheint/ersetzt wird.  </p>
+<section class="content_max">
+    <h3>Main-Section</h3>
+    <p>Der Content wäre abhängig vom login. 
+        Erste Idee ist immer die Login Section anzeigen zulassen, wohingegen der Content nach einem erfolgreichem Login erscheint/ersetzt wird.  </p>
+    
+    <app-login></app-login>
+    <app-content></app-content>
 
-<app-login></app-login>
-<app-content></app-content>
+</section>
