--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,2 +1,3 @@
 <h3>Content-Section</h3>
 <p>Hier entsteht das erste Sprint Goal! Also Navbar, Header und Kontaktliste mit Add Option. </p>
+<p>Das ist meiner!"</p>
