added header/footer and 4 sections in content via ids

--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,3 +1,12 @@
 <h3>Content-Section</h3>
 <p>Hier entsteht das erste Sprint Goal! Also Navbar, Header und Kontaktliste mit Add Option. </p>
 <p>Das ist meiner!"</p>
+
+<app-header></app-header>
+
+<app-summary id="summay-section"></app-summary>
+<app-add-task id="add-task-section"></app-add-task>
+<app-board id="board-section"></app-board>
+<app-contacts id="contacts-section"></app-contacts>
+
+<app-footer></app-footer>
