added: header html + scss

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<section>
+    <div class="header_left">
+        <h2>Kanban Project Management Tool</h2>
+    </div>
+    <div class="header_right">
+        <a class="help_link" href=""></a>
+    </div> 
+</section>
