--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
     scroll-behavior: smooth;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     color: $black;
-    background-color: $white;
+    background-color: $cream_white;
 
     // outline: 2px solid lime;
     // background: hsl(0 100% 50% / 0.1);
