--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,9 @@
 <section>
     <div class="header_left">
-        <h2>Kanban Project Management Tool</h2>
+        <h1>Kanban Project Management Tool</h1>
     </div>
     <div class="header_right">
         <a class="help_link" href=""></a>
+        <div class="initials_btn"></div>
     </div> 
 </section>
