added header_right html + scss

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="header_right">
         <a class="help_link" href=""></a>
-        <div class="initials_btn"></div>
+        <div class="initials_btn">
+            <p>ID</p>
+        </div>
     </div> 
 </section>
