--- a/src/app/main/content/summary/summary.component.html
+++ b/src/app/main/content/summary/summary.component.html
@@ -1,1 +1,55 @@
 <p>summary works!</p>
+
+<div class="dialog-container">
+  <div class="dialog-left">
+    <img
+      src="assets/img/icons/small-contact-logo.svg"
+      alt="Join Logo"
+      class="logo"
+    />
+    <h2>Add contact</h2>
+    <p>Tasks are better with a team!</p>
+    <div class="divider"></div>
+  </div>
+  <div class="dialog-right">
+    <div class="profile-pic">
+      <img src="assets/img/icons/user-profile-image.svg" alt="User Profile" />
+    </div>
+    <div class="form-container">
+      <form>
+        <div class="input-group">
+          <input type="text" placeholder="Name" class="input-field" />
+          <img
+            src="assets/img/icons/person.svg"
+            class="input-icon"
+            alt="Name Icon"
+          />
+        </div>
+        <div class="input-group">
+          <input type="email" placeholder="Email" class="input-field" />
+          <img
+            src="assets/img/icons/mail.svg"
+            class="input-icon"
+            alt="Email Icon"
+          />
+        </div>
+        <div class="input-group">
+          <input type="tel" placeholder="Phone" class="input-field" />
+          <img
+            src="assets/img/icons/call.svg"
+            class="input-icon"
+            alt="Phone Icon"
+          />
+        </div>
+        <div class="button-group">
+          <button type="button" class="cancel-btn">
+            <img src="assets/img/icons/cancel.svg" alt="Cancel" /> Cancel
+          </button>
+          <button type="submit" class="create-btn">
+            <img src="assets/img/icons/check.svg" alt="Check" /> Create contact
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
