Footer/navbar responsive design

--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,22 +1,24 @@
 <section>
-  <app-header></app-header>
+  <div>
+    <app-header></app-header>
 
-  <app-summary
-    id="summary-section"
-    [ngClass]="{ active: navigationService.selectedItem === 0 }"
-  ></app-summary>
-  <app-add-task
-    id="add-task-section"
-    [ngClass]="{ active: navigationService.selectedItem === 1 }"
-  ></app-add-task>
-  <app-board
-    id="board-section"
-    [ngClass]="{ active: navigationService.selectedItem === 2 }"
-  ></app-board>
-  <app-contacts
-    id="contacts-section"
-    [ngClass]="{ active: navigationService.selectedItem === 3 }"
-  ></app-contacts>
+    <app-summary
+      id="summary-section"
+      [ngClass]="{ active: navigationService.selectedItem === 0 }"
+    ></app-summary>
+    <app-add-task
+      id="add-task-section"
+      [ngClass]="{ active: navigationService.selectedItem === 1 }"
+    ></app-add-task>
+    <app-board
+      id="board-section"
+      [ngClass]="{ active: navigationService.selectedItem === 2 }"
+    ></app-board>
+    <app-contacts
+      id="contacts-section"
+      [ngClass]="{ active: navigationService.selectedItem === 3 }"
+    ></app-contacts>
+  </div>
 
   <app-footer></app-footer>
 </section>
