--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -7,10 +7,6 @@ footer {
   width: 230px;
   height: 100vh;
   z-index: 50;
-
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .logo-img {
@@ -21,26 +17,27 @@ footer {
 }
 
 nav {
-  @include dFlex(); 
+  @include dFlex();
   width: 100%;
   margin-bottom: 25vh;
 
   ul {
-    list-style: none;   
-    
-    padding: 0;   
-    width: 100%; 
+    list-style: none;
 
-    li {      
-      margin-bottom: 16px;      
+    padding: 0;
+    width: 100%;
+
+    li {
+      margin-bottom: 16px;
       width: 100%;
 
       a {
         text-decoration: none;
-        @include dFlex($jc:flex-start);
+        @include dFlex($jc: flex-start);
         color: $white;
-        padding: 8px 50px; 
-        width: 100%;              
+        padding: 8px 50px;
+        width: 100%;
+        font-size: 16px;
       }
 
       &:hover {
@@ -50,11 +47,9 @@ nav {
       &.active {
         background-color: $dark_dark_blue;
       }
-
     }
   }
 }
-
 
 .icon-section {
   width: 30px;
@@ -92,6 +87,63 @@ nav {
     &:hover {
       color: $light_blue;
       font-weight: 700;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .logo-img,
+  .notes {
+    display: none;
+  }
+
+  footer {
+    @include dFlex($jc: space-between);
+    flex-direction: row;
+    width: 100%;
+    height: 80px;
+  }
+
+  .icon-section {
+    margin-right: 0;
+    width: 24px;
+    height: 24px;
+  }
+
+  nav {
+    width: 100%;
+    margin-bottom: 0;
+
+    ul {
+      @include dFlex($jc: space-between);
+      padding: 0 8px;
+
+      li {
+        margin-bottom: 0;
+        width: 100%;
+        border-radius: 16px;
+
+        a {
+          justify-content: center;
+          flex-direction: column;
+          align-content: center;
+          padding: 8px 8px;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  nav {
+    ul {
+      li {
+        a {
+          padding: 8px 2px;
+          font-size: 13px;
+        }
+      }
     }
   }
 }
