--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,13 +1,19 @@
 /* bg color for user profile initials */
-$sunset_orange: rgba(255, 122, 0, 1);
-$electric_purple: rgba(147, 39, 255, 1);
-$lavender_blue: rgba(110, 82, 255, 1);
-$fuchsia_pink: rgba(252, 113, 255, 1);
-$golden_yellow: rgba(255, 187, 43, 1);
-$mint_green: rgba(31, 215, 193, 1);
-$deep_blue: rgba(70, 47, 138, 1);
-$light_red: rgba(255, 70, 70, 1);
-$aqua_blue: rgba(0, 190, 232, 1);
+$orange: rgba(255, 122, 0, 1); // Sunset Orange
+$purple: rgba(147, 39, 255, 1); // Electric Purple
+$blue_lavender: rgba(110, 82, 255, 1); // Lavender Blue
+$fuchsia: rgba(252, 113, 255, 1); // Fuchsia Pink
+$yellow_gold: rgba(255, 187, 43, 1); // Golden Yellow
+$mint: rgba(31, 215, 193, 1); // Mint Green
+$blue_deep: rgba(0, 56, 255, 1); // Deep Blue
+$red_light: rgba(255, 70, 70, 1); // Light Red
+$aqua: rgba(0, 190, 232, 1); // Aqua Blue
+$pink_soft: rgba(255, 94, 179, 1); // Soft Pink
+$peach: rgba(255, 116, 94, 1); // Peach
+$warm_yellow: rgba(255, 163, 94, 1); // Warm Yellow 
+$bright_yellow: rgba(255, 199, 1, 1); // Bright Yellow
+$green_light: rgba(195, 255, 43, 1); // Light Green
+$yellow_bright: rgba(255, 230, 43, 1); // Bright Yellow 2
 
 /* color for fonts & bg color buttons */
 $black: rgba(0, 0, 0, 1);
