--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -2,7 +2,6 @@
 
 
 section {
-    @include font($fs: 20px);
     @include dFlex($jc: space-between);
 
     // max-width: 85%;
@@ -12,11 +11,14 @@ section {
     
 
     >.header_left {
+        background-color: $white;
+        padding: 32px 64px;
         >h1 {
+            @include font($fs: 20px, $fw: 400);
+
             background-color: $white;
         }
-        background-color: $white;
-       padding: 32px 64px;
+        
     }
 
     >.header_right {
@@ -50,7 +52,7 @@ section {
 
             &:hover {
                 // background-image: url('./../../../assets/img/icons/user_profile_initials1.svg');
-                transform: scale(1.25);
+                // transform: scale(1.25);
                 background-color: rgba($color: #000000, $alpha: 0.1);
                 cursor: pointer;
             }
@@ -59,13 +61,11 @@ section {
                 background-color: $white;
                 @include font($fs: 32px, $fw: 500);
                 color: $aqua_blue;
+
+                &:hover {
+                    background-color: rgba($color: #000000, $alpha: 0.1);
+                }
             } 
         }
-    }
-}
-
-.initials_btn p{
-    &:hover {
-        background-color: rgba($color: #000000, $alpha: 0.1);
     }
 }
