--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -4,8 +4,6 @@ section {
     @include dFlex($ai: flex-start);
     width: 100%;
     height: 100vh;
-
-    border: 1px solid;
 }
 
 /* Scrollbar Styling */
@@ -30,29 +28,31 @@ section {
 .contact-list {
     width: 30%;
     padding-top: 20px;
-    // padding-left: 50px;
     background-color: $white;
-
-    border: 1px solid green;
 }
 
 .list {
-    @include dFlex($g: 20px);
+    @include dFlex();
     flex-direction: column;
     background-color: transparent;
 }
 
 .single-contact {
     background-color: transparent;
-    @include dFlex($ai: flex-start, $g: 20px);
+    @include dFlex($ai: flex-start);
     flex-direction: column;
 }
 
-.single-contact-content {
-    @include dFlex($jc: flex-start, $g: 20px);
+.letter {
+    @include font($fs: 20px, $fw: 400);
     width: 352px;
+    border-bottom: 1px solid rgba(209, 209, 209, 1);
+    border-radius: 3px;
+    padding:17px 36px;
+}
 
-    // border: 1px solid;
+.single-contact-container {
+    cursor: pointer;
 
     &:hover {
             background-color: $cream-white;
@@ -61,19 +61,28 @@ section {
         }
 }
 
+.single-contact-content {
+    @include dFlex($jc: flex-start, $g: 20px);
+    width: 352px;
+    padding: 15px 24px;    
+}
+
 .profile_badge {
+    @include dFlex();
     width: 42px;
     height: 42px;
     border: 1px solid;
     border-radius: 50%;
+    @include font($fs: 12px, $fw: 400);
+    color: $white;
 }
 
 .info {
-    @include dFlex($ai: flex-start, $g: 10px);
+    @include dFlex($ai: flex-start, $g: 5px);
     flex-direction: column;
     background-color: transparent;
     padding: 8px;
-    cursor: pointer;
+    // cursor: pointer;
     // flex: 1;    
 
     >p {
@@ -109,8 +118,6 @@ span {
 .contacts {
     width: 70%;
     padding: 20px;
-
-    border: 1px solid red;
 }
 
 .headline {
