--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,5 +7,10 @@
         <div class="initials_btn">
             <p>ID</p>
         </div>
+        <div class="header_overlay">
+            <a href="">Legal Notice</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Log out</a>
+        </div>
     </div> 
 </section>
