--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -23,6 +23,7 @@ $dark_dark_blue: rgba(9, 25, 49, 1);
 $dark_blue: rgba(42, 54, 71, 1);
 $light_blue: rgba(41, 171, 226, 1);
 $blue: rgba(0, 124, 238, 1);
+$button_hover_blue: rgba(42, 61, 89, 1);
 
 /* bg section */
 $cream_white: #f6f7f8;
