--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,15 +4,16 @@
 section {
     @include dFlex($jc: space-between);
 
-    // max-width: 85%;
     width: 100%;
     background-color: $white;
     border-bottom: inset;
     position: relative;
 
     >.header_left {
+
         background-color: $white;
         padding: 32px 64px;
+
         >h1 {
             @include font($fs: 20px, $fw: 400);
 
@@ -22,9 +23,9 @@ section {
     }
 
     >.header_right {
-        background-color: $white;
-
         @include dFlex($jc: center);
+
+        background-color: $white;
         
         >.help_link {
             height: 32px;
@@ -39,7 +40,6 @@ section {
         }
 
         >.initials_btn {
-
             @include dFlex($ai: center);
 
             height: 64px;
@@ -48,20 +48,17 @@ section {
             border: 3px solid black;
             background-color: $white;
             margin-right: 40px;
-            // background-image: url('./../../../assets/img/icons/user_profile_initials.svg');
 
             &:hover {
-                // background-image: url('./../../../assets/img/icons/user_profile_initials1.svg');
-                // transform: scale(1.25);
                 background-color: rgba($color: #000000, $alpha: 0.1);
                 cursor: pointer;
             }
 
             >p {
-                background-color: transparent;
                 @include font($fs: 32px, $fw: 500);
-                color: $aqua;
 
+                background-color: transparent;
+                color: $aqua;
 
                 &:hover {
                     pointer-events: none;
@@ -69,32 +66,34 @@ section {
             } 
         }
 
-    >.header_overlay {
-
-        
-
-        position: absolute;
-        top: 84px;
-        right: 40px;
-        background-color: $dark_blue;
-        border-radius: 20px 0 20px 20px;
-        flex-direction: column;
-
-        >.inner_overlay {
-            @include dFlex($ai: start, $g: 16px);
+        >.header_overlay {
+            position: absolute;
+            top: 84px;
+            right: 40px;
+            background-color: $dark_blue;
+            border-radius: 20px 0 20px 20px;
             flex-direction: column;
-            padding: 32px 16px;
 
-            >a {
-                padding-left: 16px;
-                padding-right: 16px;
-                text-decoration: none;
-                color: $white;
+            >.inner_overlay {
+                @include dFlex($ai: start);
+
+                flex-direction: column;
+                padding: 16px 8px;
+
+                >a {
+                    padding: 16px 16px;
+                    text-decoration: none;
+                    color: $white;
+                    width: 100%;
+
+                    &:hover {
+                        background-color: $button_hover_blue;
+                    }
+                }
             }
-        }
 
         
-    }
+        }
     }
 }
 
