added: help component + html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <h3>Normann Test!</h3>
     
     <p>Martin Test</p>
-    
+    <!-- <app-help></app-help> -->
     <app-main></app-main>
     
     <router-outlet></router-outlet>
