cleanup and minor fixes in add contact dialog

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -13,6 +13,9 @@
     <div class="divider"></div>
   </div>
   <div class="dialog-right">
+    <button class="close-btn">
+      <img src="assets/img/icons/close.svg" alt="Close" />
+    </button>
     <div class="profile-pic">
       <img src="assets/img/icons/user-profile-image.svg" alt="User Profile" />
     </div>
@@ -44,10 +47,10 @@
         </div>
         <div class="button-group">
           <button type="button" class="cancel-btn">
-            <img src="assets/img/icons/cancel.svg" alt="Cancel" /> Cancel
+            Cancel <img src="assets/img/icons/cancel.svg" alt="Cancel" />
           </button>
           <button type="submit" class="create-btn">
-            <img src="assets/img/icons/check.svg" alt="Check" /> Create contact
+            Create contact <img src="assets/img/icons/check.svg" alt="Check" />
           </button>
         </div>
       </form>
