--- a/src/app/main/login/login.component.scss
+++ b/src/app/main/login/login.component.scss
@@ -1,9 +1,9 @@
-@import './../../../styles.scss';
+@import "./../../../styles.scss";
 
 .dialog-container {
   display: flex;
-  width: 1150px;
-  height: 600px;
+  width: 1080px;
+  height: 524px;
   background: $white;
   border-radius: 24px;
   overflow: hidden;
@@ -11,7 +11,6 @@
 
 .dialog-left {
   @include dFlex($ai: flex-start);
-  flex: 1.5;
   flex-direction: column;
   background-color: $dark_blue;
   padding: 40px;
@@ -50,20 +49,23 @@
   gap: 40px;
 }
 
-
 .form-container {
   display: flex;
   align-items: center;
-
 }
 
 .close-btn {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 36px;
+  right: 36px;
   background: none;
   border: none;
   cursor: pointer;
+  border-radius: 50%;
+
+  &:hover {
+    background: #f1f1f1;
+  }
 }
 
 .profile-pic {
@@ -72,14 +74,19 @@
   align-items: center;
 }
 
+form {
+  margin-top: 48px;
+}
+
 .input-group {
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 24px;
+  width: 120%;
 }
 
 .input-field {
   width: 100%;
-  padding: 10px 40px;
+  padding: 10px 16px;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 16px;
@@ -97,7 +104,7 @@
   display: flex;
   justify-content: flex-start;
   gap: 24px;
-  margin-top: 20px;
+  margin-top: 36px;
 }
 
 .cancel-btn,
@@ -114,10 +121,24 @@
 .cancel-btn {
   border: 1px solid black;
   background-color: $white;
+
+  &:hover {
+    border-color: $light_blue;
+    color: $light_blue;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+
+    img {
+      color: $light_blue;
+    }
+  }
 }
 
 .create-btn {
   background: $dark_blue;
   color: white;
 
+  &:hover {
+    background-color: $light_blue;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  }
 }
