--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -31,6 +31,9 @@
             <img src="assets/img/icons/or_icon.svg" />
             <p>Better with a team</p>
         </div>
+        <div class="contact_content">
+
+        </div>
     </div>
 
     <!-- @for (item of contactService.contactList; track $index) {
