--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -5,9 +5,11 @@
         <a href="">set bg-img</a>
     </div>
     <div class="help_content">
-        <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll provide an overview of what<br>
-            Join is, how it can benefit you, and how to use it.
-        </p>
+        <div class="help_paragraph">
+            <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll provide an overview of what<br>
+                Join is, how it can benefit you, and how to use it.
+            </p>
+        </div>
         <h2>What is Join?</h2>
         <p>Join is a kanban-based project management tool designed and built by a group of dedicated students as part of their web<br> 
             development bootcamp at the Developer Akademie</p>
@@ -23,7 +25,7 @@
             <li>
                 <h3>Exploring the Board</h3>
                 <p>
-                    When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: "To Do",<br> 
+                    When you log in to</p> <p class="join_aqua">Join</p><p>, you'll find a default board. This board represents your project and contains four default lists: "To Do",<br> 
                     "In Progress", “Await feedback” and "Done".</p>
             </li>
             <li>
