--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -3,12 +3,13 @@
 section {
     @include dFlex($ai: flex-start);
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 91px);
 }
 
 /* Scrollbar Styling */
 .contact-list::-webkit-scrollbar {
     width: 8px;
+
 }
 
 .contact-list::-webkit-scrollbar-track {
@@ -27,17 +28,17 @@ section {
 
 .contact-list {
     width: 30%;
-    height: calc(100vh - 91px);
+    height: 100%;
     overflow-y: auto;
-    padding-top: 20px;
+    padding-top: 10px;
     background-color: $white;
 }
 
 .list {
-    height: 100%;
     @include dFlex();
     flex-direction: column;
     background-color: transparent;
+    position: relative;
 }
 
 .single-contact {
@@ -111,6 +112,9 @@ button {
     color: $white;
     border-radius: 10px;
     cursor: pointer;
+    position: sticky;
+    top: 0px; // 20px Abstand zum unteren Rand
+    z-index: 10; // Setze den Z-Index, damit der Button immer oben bleibt
 }
 
 span {
@@ -128,6 +132,7 @@ span {
     flex-direction: column;
     width: 70%;
     padding: 20px;
+    box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
 }
 
 .headline {
