refactoring: help component html + scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="content_max">
 
-    <!-- <app-help></app-help> -->
+    <app-help></app-help>
     <app-main></app-main>
     
     <router-outlet></router-outlet>
