--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -44,12 +44,12 @@ section {
             height: 64px;
             width: 64px;
             border-radius: 50%;
-            border: 3px solid black;
+            border: 3px solid $black;
             background-color: $white;
             margin-right: 40px;
 
             &:hover {
-                background-color: rgba($color: #000000, $alpha: 0.1);
+                background-color: rgba($gray, 0.5);
                 cursor: pointer;
             }
 
