--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,26 +1,25 @@
-
 <section>
     <div class="help_header">
         <h1>Help</h1>
-        <a href="">set bg-img</a>
+        <a href=""></a>
     </div>
     <div class="help_content">
-        <div class="help_paragraph">
-            <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll provide an overview of what<br>
-                Join is, how it can benefit you, and how to use it.
+        <span class="help_paragraph">
+            <p>Welcome to the help page for<span class="join_aqua">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what<br>
+                <span class="join_aqua">Join</span> is, how it can benefit you, and how to use it.
             </p>
-        </div>
+        </span>
         <h2>What is Join?</h2>
-        <p>Join is a kanban-based project management tool designed and built by a group of dedicated students as part of their web<br> 
+        <p><span class="join_aqua">Join</span> is a kanban-based project management tool designed and built by a group of dedicated students as part of their web<br> 
             development bootcamp at the Developer Akademie</p>
         <p>Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize<br> 
-            efficiency (or flow). Join leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual<br> 
+            efficiency (or flow). <span class="join_aqua">Join</span> leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual<br> 
             interface</p>
-        <p>It is important to note that Join is designed as an educational exercise and is not intended for extensive business usage. While we<br> 
+        <p>It is important to note that <span class="join_aqua">Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we<br> 
             strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects<br> 
-            of quality regarding Join.</p>
+            of quality regarding <span class="join_aqua">Join</span>.</p>
         <h2>How to use it</h2>
-        <p>Here is a step-by-step guide on how to use Join:</p>
+        <p>Here is a step-by-step guide on how to use <span class="join_aqua">Join</span>:</p>
         <ol>
             <li>
                 <h3>Exploring the Board</h3>
@@ -31,7 +30,7 @@
             <li>
                 <h3>Creating Contacts</h3>
                 <p>
-                    In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in<br> 
+                    In <span class="join_aqua">Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in<br> 
                     the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the<br> 
                     board.</p>
             </li>
@@ -52,13 +51,18 @@
                 <h3>Deleting Cards</h3>
                 <p>
                     Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board.<br> 
-                    Please exercise caution when deleting cards, as this action is irreversible. Remember that using Join effectively requires consistent updates<br> 
+                    Please exercise caution when deleting cards, as this action is irreversible. 
+                </p>
+                <p>   
+                    Remember that using <span class="join_aqua">Join</span> effectively requires consistent updates<br> 
                     from you and your team to ensure the board reflects the current state of your project.<br>
-
-                    Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help you!
+                </p>
+                <p>       
+                    Have more questions about <span class="join_aqua">Join</span>? Feel free to contact us at [Your Contact Email]. We're here to help you!
                 </p>
             </li>
             
         </ol>
+        <h2>Enjoy using Join!</h2>
     </div>
 </section>
